minor change on responsive side

--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,11 @@
 .react-data-table-component .rdt_TableRow:hover {
   background-color: #f0f0f0;
 }
+
+.iPIoXn {
+  padding: 0 2px !important;
+}
+
+.fQsEoO {
+  padding: 0 2px !important;
+}
